--- a/JavaAssignment/pom.xml
+++ b/JavaAssignment/pom.xml
@@ -34,16 +34,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.3.4.RELEASE</version>
 		</dependency>
-	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
-	<!--	<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-security</artifactId>
-		    <version>2.3.4.RELEASE</version>
-		</dependency>-->
 		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
 		    <version>2.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>3.1.1</version>
 		</dependency>
 
 
