--- a/JavaAssignment/pom.xml
+++ b/JavaAssignment/pom.xml
@@ -18,6 +18,12 @@
 		    <version>2.3.4.RELEASE</version>
 		    <type>pom</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-crypto</artifactId>
+		    <version>6.1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
