--- a/JavaAssignment/src/main/resources/application.properties
+++ b/JavaAssignment/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hiberate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+
+server.servlet.session.tracking-modes=cookie
+
