--- a/JavaAssignment/Dockerfile
+++ b/JavaAssignment/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.8.5-openjdk-11 AS build
 COPY ..
-RUN mvn clean package -DskipsTests
+RUN mvn clean package -DskipTests
 
 FROM openjdk:11.0.1-jdk-slim
 COPY --from=build /target/JavaAssignment-0.0.1-SNAPSHOT.jar JavaAssignment.jar
